[package]
name = "graph-simulation"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "A library for simulation algorithm"


[dependencies]
graph-base = "0.1.13"
rand = "0.9.1"
rand_pcg = "0.9.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
fxhash = "0.2.1"
bincode = "1.3.3"
serde_json = "1.0.140"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "simulation"
# harness = false  # 禁用默认测试框架
